turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: not found: type color
def setCouleurSol(c:color){
                    ^LangtonsAnt:9: error: not found: value getcouleurSol
if (getcouleurSol()==Color.black){
    ^LangtonsAnt:10: error: not found: value color
	setCouleurSol(color.white);
                      ^LangtonsAnt:14: error: not found: value getcouleur
else if (getcouleur()==Color.white){
         ^LangtonsAnt:15: error: not found: value color
	setCouleurSol(color.black);
                      ^