turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:color){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	
}

def step() {
if (getcouleurSol()==Color.black){
	setCouleurSol(color.white);
	gauche();
	avance();
}
else if (getcouleur()==Color.white){
	setCouleurSol(color.black);
	gauche();
	avance();


	
}
}
